# NewtonFractal

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  fractal.rs  fractal.wgsl  main.rs  ui.rs
