[package]
name = "newton-fractal"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.9"
glam = "0.19"
imgui = "0.8"
pollster = "0.2"
wgpu = "0.11"
winit = "0.25"